[package]
name = "ring-2zero"
version = "0.291.0"
edition = "2021"
description = "High-performance Wayland screen streamer over WebRTC with tile-based diff encoding"
license = "MIT"
repository = "https://github.com/tarilka0gg/ring-2zero"
keywords = ["wayland", "webrtc", "screencast", "streaming", "webp"]
categories = ["multimedia::video", "network-programming"]

[lib]
name = "screen_streamer"
path = "src/lib.rs"

[[bin]]
name = "ring-2zero"
path = "src/main.rs"

[[bin]]
name = "webp_codec_bench"
path = "src/bin/webp_codec_bench.rs"
required-features = ["webp_bench"]

[[bin]]
name = "detailed_bench"
path = "src/bin/detailed_bench.rs"
required-features = ["bench_tools"]

[[bin]]
name = "frame_profiler"
path = "src/bin/frame_profiler.rs"
required-features = ["bench_tools"]

[[bin]]
name = "diff_profiler"
path = "src/bin/diff_profiler.rs"
required-features = ["bench_tools"]

[[bin]]
name = "hash_analyzer"
path = "src/bin/hash_analyzer.rs"
required-features = ["bench_tools"]

[[bin]]
name = "modern_hash_bench"
path = "src/bin/modern_hash_bench.rs"
required-features = ["bench_tools"]

[[bin]]
name = "advanced_bench"
path = "src/bin/advanced_bench.rs"
required-features = ["bench_tools"]

[dependencies]
wayland-client = "0.31"
wayland-protocols-wlr = { version = "0.3", features = ["client"] }
wayland-protocols = { version = "0.32", features = ["client"] }
libc = "0.2"
rayon = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
webrtc = "0.17"
bytes = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
fast-webp = "0.1.1"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
crossbeam = "0.8"
num_cpus = "1.0"
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12"] }
rustls-pemfile = "2"

# Alternative WebP implementations for benchmarking
webp = { version = "0.3", optional = true }
webpx = { version = "0.4.0", optional = true }
webp-rust = { version = "0.2.1", optional = true }
webrtc-ice = "0.17"
env_logger = "0.11.11"

[features]
quality_metrics = []
bench_tools = []
webp_bench = ["webp", "webpx", "webp-rust"]
pipewire_capture = []

[build-dependencies]
cc = "1"
pkg-config = "0.3"
